# experiments

./: .gitignore  premake4.lua
emu-gb/: premake4.lua
emu-gb/src/: cpu.h  mmu.c  mmu.h
mustached-adventure/: .gitignore  README.md  mustache.csproj  mustache.sln
mustached-adventure/src/: Entity.cs  Game.cs  IRenderable.cs  Material.cs  Quad.cs  Screen.cs  Shader.cs  Sprite.cs
nirvash/: .gitignore  COPYING  README  config.lua  fxaa.glsl  monkey.dae  premake4.lua  test.glsl
nirvash/src/: configuration.cpp  configuration.h  entity.cpp  entity.h  file.cpp  file.h  inputstate.cpp  inputstate.h  main.cpp  resourceloader.h  screen.cpp  screen.h  state.h  window.cpp  window.h
nirvash/src/fx/: postprocess.cpp  postprocess.h
nirvash/src/material/: material.cpp  material.h  texture.h
nirvash/src/model/: mesh.h  model.cpp  model.h
nirvash/src/utils/: expect.h  logger.cpp  logger.h  thread.h  timer.cpp  timer.h
ogre-test/: .gitignore  ReadMe.wiki
ogre-test/media/materials/: beat.material  shibuya_terminal.material
ogre-test/media/shaders/: cel.fs  cel.vs  (+2 more)
ogre-test/src/: main.cpp
prototype/: .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.ac
prototype/src/: config.h.in  main.c  slots.c
src/: Makefile  cpu.c  cpu.h  mmu.c  mmu.h
week-03-colby/: Gemfile  Rakefile  ReadMe.md
week-03-colby/lib/: main.rb
week-03-colby/views/: index.erb  style.scss
week-07-colby/: Gemfile  Rakefile  ReadMe.md
week-07-colby/lib/: main.rb
wrath/: .gitignore  Wrath.sln
wrath/Wrath/: Entity.cs  Material.cs  Quad.cs  Sprite.cs  Wrath.csproj  main.cs
(+19 files in other folders)
