AC_PREREQ([2.68])
AC_INIT([prototype], [0.01], [shakesoda@gmail.com])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_FILES([
		Makefile
])

AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O

AM_INIT_AUTOMAKE([-Wall])

#PKG_CHECK_MODULES([DEPS], [libglfw >= 2.6.1])

# todo: do stuff

AC_OUTPUT
